<resources>
    <string name="_hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">SafeEat</string>
    <string name="d_button_allergy">Allergy button</string>
    <string name="d_button_back">Back button</string>
    <string name="d_button_close">Close button</string>
    <string name="d_button_search">Search button</string>
    <string name="d_feedback_star">Feedback star</string>
    <string name="d_icon_business">Icon business</string>
    <string name="d_icon_cart">Icon cart</string>
    <string name="d_icon_check">Icon check</string>
    <string name="d_icon_confirmation_handshake">Icon confirmation handshake</string>
    <string name="d_icon_credit_card">Icon credit card</string>
    <string name="d_icon_delete">Icon delete</string>
    <string name="d_icon_delivery">Icon delivery</string>
    <string name="d_icon_edit">Icon edit</string>
    <string name="d_icon_front_hand">Icon front hand</string>
    <string name="d_icon_for_address">Icon for Address</string>
    <string name="d_icon_for_payment">Icon for Payment</string>
    <string name="d_icon_home">Icon home</string>
    <string name="d_icon_location">Icon location</string>
    <string name="d_icon_lunch">Icon lunch</string>
    <string name="d_icon_minus">Icon minus</string>
    <string name="d_icon_navigate">Icon navigate</string>
    <string name="d_icon_plus">Icon plus</string>
    <string name="d_icon_status">Icon status</string>
    <string name="d_icon_warning">Icon warning</string>
    <string name="d_image_category">Category image</string>
    <string name="d_image_logo">SafeEat logo</string>
    <string name="d_image_product">Product image</string>
    <string name="d_image_profile">Profile image</string>
    <string name="d_image_restaurant">Restaurant image</string>
    <string name="d_lunch_icon">Lunch icon</string>
    <string name="d_product_image">Product image</string>
    <string name="d_restaurant_poster">Restaurant poster</string>
    <string name="d_search_input">Button Search Input</string>
    <string name="h_input_address">Enter your address</string>
    <string name="h_input_cellphone">Enter your cell phone</string>
    <string name="h_input_email">Enter your email</string>
    <string name="h_input_name">Enter your name</string>
    <string name="h_input_password">Enter your password</string>
    <string name="k_address">[Full Address]</string>
    <string name="k_address_name">[Address Name]</string>
    <string name="k_card_option">[Card Option]</string>
    <string name="k_cart_item_name">[Product Name]</string>
    <string name="k_cart_item_quantity">[0]</string>
    <string name="k_cart_products_count">[1]</string>
    <string name="k_cart_products_price">[30,00]</string>
    <string name="k_category">[Category]</string>
    <string name="k_date_time">[01–01–2023]</string>
    <string name="k_delivery_option">[Standard]</string>
    <string name="k_delivery_price">Delivery [€0,00]</string>
    <string name="k_delivery_range_time">[99 – 99 min]</string>
    <string name="k_how_was_the_restaurant">How was the [Restaurant]?</string>
    <string name="k_ingredient">[Ingredient]</string>
    <string name="k_location">[Location]</string>
    <string name="k_order_item_products_count">[0]</string>
    <string name="k_order_status">Your order has [status]</string>
    <string name="k_payment_name">[Payment Name]</string>
    <string name="k_payment_products_count">[0]</string>
    <string name="k_price">[€0,00]</string>
    <string name="k_product">[Product]</string>
    <string name="k_product_description">[Product Description]</string>
    <string name="k_product_price">[Product Price]</string>
    <string name="k_profile">[Profile Description]</string>
    <string name="k_profile_name">[Name]</string>
    <string name="k_restaurant">[Restaurant]</string>
    <string name="k_score">[0.0]</string>
    <string name="k_status">[Status]</string>
    <string name="k_time_ago">[0 units ago]</string>
    <string name="k_times">[0x]</string>
    <string name="k_title">[Title]</string>
    <string name="m_allergy_title">Do you have any kind of food restrictions?</string>
    <string name="m_confirmation_order">Your order completed successful</string>
    <string name="m_feedback">Give a feedback</string>
    <string name="m_product_added">Your product has been added to the cart!</string>
    <string name="m_restriction_alert">Your order has product marked as restricted. Do you want to continue?</string>
    <string name="m_warning_message">Ingredient(s) matching with restrictions</string>
    <string name="m_with_account">Already have an account?</string>
    <string name="m_without_account">Don\'t have an account?</string>
    <string name="r_x_times">x</string>
    <string name="t_about">About us</string>
    <string name="t_add_to_cart">Add to Cart</string>
    <string name="t_add_payment">Add Payment Method</string>
    <string name="t_address">Address</string>
    <string name="t_advertisement">Advertisement</string>
    <string name="t_cancel">Cancel</string>
    <string name="t_cart">Cart</string>
    <string name="t_cart_is_empty">Your cart is empty</string>
    <string name="t_categories">Categories</string>
    <string name="t_cellphone">Cellphone</string>
    <string name="t_change_photo">Change Photo</string>
    <string name="t_complement">Complement</string>
    <string name="t_confirm">Confirm</string>
    <string name="t_confirm_password">Confirm password</string>
    <string name="t_continue">Continue</string>
    <string name="t_ddd">DDD</string>
    <string name="t_delivered">Delivered</string>
    <string name="t_registered">Registered</string>
    <string name="t_canceled">Canceled</string>
    <string name="t_delivery_option">Delivery Option</string>
    <string name="t_edit_allergies">Edit Allergies</string>
    <string name="t_edit_profile">Edit Profile</string>
    <string name="t_email">Email</string>
    <string name="t_exit">Exit</string>
    <string name="t_feedback">Feedback</string>
    <string name="t_home">Home</string>
    <string name="t_ingredients">Ingredients</string>
    <string name="t_login">Login</string>
    <string name="t_name">Name</string>
    <string name="m_address_new">New address</string>
    <string name="m_address_edit">Edit address</string>
    <string name="t_new_payment">New Payment</string>
    <string name="t_new_delivery_option">New delivery option</string>
    <string name="t_no">No</string>
    <string name="t_notifications">Notifications</string>
    <string name="t_number">Number</string>
    <string name="t_observations">Observations</string>
    <string name="t_ok">OK</string>
    <string name="t_open">Open</string>
    <string name="t_order">Order</string>
    <string name="t_orders">Orders</string>
    <string name="t_password">Password</string>
    <string name="t_payment">Payment</string>
    <string name="t_payment_methods">Payment methods</string>
    <string name="t_payment_options">Payment Options</string>
    <string name="t_postal_code">Postal code</string>
    <string name="t_preparing">Preparing</string>
    <string name="t_product_details">Product Details</string>
    <string name="t_products">Products</string>
    <string name="t_restaurant">Restaurants</string>
    <string name="t_restrictions">Restrictions</string>
    <string name="t_save">Save</string>
    <string name="t_search">Search</string>
    <string name="t_settings">Settings</string>
    <string name="t_sign_up">Sign Up</string>
    <string name="t_street">Street</string>
    <string name="t_submit">Submit</string>
    <string name="t_subtotal">Subtotal</string>
    <string name="t_total">Total</string>
    <string name="t_transporting">Transporting</string>
    <string name="t_user">User</string>
    <string name="t_yes">Yes</string>
    <string name="t_city">City</string>
    <string name="t_no_data">No data</string>
    <string name="t_error">Error</string>
    <string name="t_cvv">CVV</string>
    <string name="t_expiration_date">Expiration Date</string>
    <string name="h_expiration_date">MM/AAAA</string>
    <string name="t_payment_type">Payment Type</string>
</resources>